# Viet-contract-auditor

./: .env  .gitignore  CLAUDE.md  HDLD_ThucHanh_01.docx  HDLD_ThucHanh_01_report.md  Project_base_knowledge.md  README.md  docker-compose.yml  main.py  phase2_lightrag.ipynb  pyproject.toml  report_v2.md  report_v3.md  setup.ps1  setup.sh  storage_health_check.json
config/: sources.json
lightrag_index/: graph_chunk_entity_relation.graphml  kv_store_doc_status.json  kv_store_entity_chunks.json  kv_store_full_docs.json  kv_store_full_entities.json  kv_store_full_relations.json  kv_store_relation_chunks.json  kv_store_text_chunks.json  vdb_chunks.json
src/: __init__.py  check_storage.py  data_ingestion.py  init_storage.py  main.py  run_audit.py  semantic_chunker.py
src/agents/: __init__.py  audit_agent.py  generator_agent.py  orchestrator.py  retrieval_agent.py  router_agent.py
src/core/: __init__.py  legal_patterns.py  lightrag_client.py  prompts.py  state.py
src/ingestion/config/: discovery.yaml  scraping.yaml  sources.yaml
src/ingestion/discovery/: runner.py
src/ingestion/discovery/engines/: google_serper.py
src/ingestion/schemas/: models.py
src/ingestion/scraping/: coordinator.py  state_manager.py
src/ingestion/scraping/normalizers/: __init__.py  content_cleaner.py
src/ingestion/scraping/scrapers/: base.py  congbao_scraper.py  tvpl_scraper.py
src/utils/: logger_config.py
tests/: test_official_url_filter.py  test_resume_idempotent.py  test_scraping_components.py
