[project]
name = "viet-contract-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "datasets>=4.6.1",
    "langchain-core>=0.3.0",
    "langgraph>=0.3.0,<0.4.0",
    "lightrag-hku>=1.4.12",
    "neo4j>=6.1.0",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "qdrant-client>=1.17.1",
    "spacy>=3.8.11",
    "tqdm>=4.67.3",
]
